--- a/create-pt1-csv.ipynb
+++ b/create-pt1-csv.ipynb
@@ -14,15 +14,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-10-24 09:24:56.707782: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2024-10-24 09:24:56.725790: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2024-10-24 09:24:56.731195: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2024-10-24 09:24:56.745434: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2024-10-24 09:46:09.595302: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-10-24 09:46:09.612069: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-10-24 09:46:09.617179: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-10-24 09:46:09.630273: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-10-24 09:24:58.496285: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     /home/echung32/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n"
+      "2024-10-24 09:46:11.576164: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     },
     {
@@ -37,7 +34,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-10-24 09:25:02.504102: I tensorflow/core/common_runtime/gpu/gpu_device.cc:2021] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 31134 MB memory:  -> device: 0, name: Tesla V100-SXM2-32GB, pci bus id: 0000:0b:00.0, compute capability: 7.0\n"
+      "2024-10-24 09:46:16.140732: I tensorflow/core/common_runtime/gpu/gpu_device.cc:2021] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 505 MB memory:  -> device: 0, name: Tesla V100-SXM2-32GB, pci bus id: 0000:0b:00.0, compute capability: 7.0\n"
      ]
     },
     {
@@ -53,11 +50,6 @@
    "source": [
     "import pandas as pd\n",
     "import tensorflow as tf\n",
-    "\n",
-    "import string\n",
-    "import re\n",
-    "import nltk\n",
-    "nltk.download('stopwords')\n",
     "\n",
     "batch_size = 32\n",
     "seed = 42\n",
@@ -83,22 +75,25 @@
     "\n",
     "raw_train_ds = raw_train_ds.cache().prefetch(buffer_size=tf.data.AUTOTUNE)\n",
     "raw_val_ds = raw_val_ds.cache().prefetch(buffer_size=tf.data.AUTOTUNE)\n",
-    "raw_test_ds = raw_test_ds.cache().prefetch(buffer_size=tf.data.AUTOTUNE)\n",
-    "\n",
-    "swords = nltk.corpus.stopwords.words(\"english\")"
+    "raw_test_ds = raw_test_ds.cache().prefetch(buffer_size=tf.data.AUTOTUNE)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "0134ac22-3eb9-477f-9a6a-fa1b5cc588d6",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true,
+    "frozen": false
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-10-24 09:27:59.850070: I tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n"
+      "2024-10-24 09:46:23.302405: I tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n",
+      "2024-10-24 09:46:26.866743: I tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n"
      ]
     },
     {
@@ -110,15 +105,6 @@
     }
    ],
    "source": [
-    "# clean the dataset\n",
-    "def clean_text(input_data):\n",
-    "    lowercase = input_data.lower()\n",
-    "    strip_html = re.sub(r'<br\\s*/?>', '', lowercase)\n",
-    "    strip_punctuation = re.sub(r'[%s]' % re.escape(string.punctuation), '', strip_html)\n",
-    "    strip_stopwords = re.sub(r'\\b(' + r'|'.join(swords) + r')\\b\\s*', '', strip_punctuation)\n",
-    "    return strip_stopwords\n",
-    "\n",
-    "# Function to convert dataset to DataFrame and then save as CSV\n",
     "def dataset_to_csv(dataset, filename):\n",
     "    texts = []\n",
     "    labels = []\n",
@@ -127,11 +113,9 @@
     "        texts.extend(text_batch.numpy().tolist())  # Convert tensors to lists\n",
     "        labels.extend(label_batch.numpy().tolist())  # Convert tensors to lists\n",
     "\n",
-    "    cleaned_texts = [clean_text(t.decode('utf-8')) for t in texts]\n",
-    "    \n",
     "    # Create a DataFrame\n",
     "    df = pd.DataFrame({\n",
-    "        'text': cleaned_texts,\n",
+    "        'text': [t.decode('utf-8') for t in texts],\n",
     "        'label': labels\n",
     "    })\n",
     "\n",
